# Chess-Arena

./: .gitignore  PROJECT_LAYER_GUIDE.md  README.md  Readme.md  V2.md  consideration  docker-compose.yml  pytest.ini  temp1  v2done
v2/: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
v2/app/: __init__.py  main.py
v2/app/api/: challenges.py  fair_play.py  games.py  health.py  matchmaking.py  router.py  settlements.py  tournaments.py
v2/app/core/: __init__.py  config.py  database.py  health.py  logging.py  middleware.py  rate_limit.py
v2/app/game/: __init__.py  engine.py  rating.py  state.py
v2/app/models/: __init__.py  challenge.py  game.py  rating.py  security.py  tournament.py  user.py
v2/app/services/: __init__.py  challenge_service.py  clock_service.py  game_service.py  matchmaking_service.py  move_service.py  persistent_gameplay_service.py  rating_application_service.py  security_service.py  settlement_service.py  tournament_service.py
v2/app/ws/: __init__.py  connection_manager.py  game_socket.py
v2/contracts/: README.md  moccasin.toml  pyproject.toml
v2/contracts/src/: challenge_escrow_v2.vy
v2/contracts/tests/: test_challenge_escrow_v2_behavior.py  test_challenge_escrow_v2_contract.py
v2/infra/: README.md
v2/migrations/: env.py
v2/migrations/versions/: 20260506_0001_core_game_tables.py  20260514_0002_challenge_tables.py  20260514_0003_tournament_tables.py  20260514_0004_security_ops_tables.py
v2/tests/: __init__.py
v2/tests/api/: test_challenges.py  test_games.py  test_health.py  test_matchmaking.py  (+1 more)
(+84 files in other folders)
